added produt list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <router-outlet></router-outlet> -->
 <app-header></app-header>
-
-<app-footer>
+<app-products></app-products>
+<app-footer id="footer"></app-footer>
