--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 h5{
-    position: absolute;
+    position: relative;
     padding: 10px;
-    bottom: 0px;
+    bottom: 0;
     margin-left: auto;
     background-color: aliceblue;
     width: 100%;
