added shoppings and recipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 <!-- <router-outlet></router-outlet> -->
-<app-header></app-header>
+<!-- <app-header></app-header>
 <app-products></app-products>
-<app-footer id="footer"></app-footer>
+<app-footer id="footer"></app-footer> -->
+<app-header></app-header>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <app-recipes></app-recipes>
+            <app-shopping-list></app-shopping-list>
+        </div>
+    </div>
+</div>
+<app-footer></app-footer>
