--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,6 +3,12 @@
     <div class="col-xs-10">
         <app-shopping-edit></app-shopping-edit>
         <hr>
-        <h2>Shopping List</h2>
+     <ul class="list-group">
+        <a  class="list-group-item" style="cursor:pointer"
+        *ngFor="let ingredient of ingrediants">
+        {{ingredient.name}} ({{ingredient.quantity}})
+        </a>
+
+     </ul>
     </div>
 </div>
